--- a/css/flexbox-and-grid/index.html
+++ b/css/flexbox-and-grid/index.html
@@ -3,15 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Responsive Design</title>
   </head>
   <body>
     <main class="main">
-      <section class="main__section">
-        <header class="content-header">
-          <h1 class="content-header__h1">메인 콘텐츠</h1>
-        </header>
-      </section>
       <aside class="main__aside">
         <ul class="list">
           <li class="list__item">썸네일 1</li>
@@ -19,11 +15,15 @@
           <li class="list__item">썸네일 3</li>
         </ul>
       </aside>
+      <section class="main__section">
+        <h1 class="content">메인 콘텐츠</h1>
+      </section>
     </main>
     <nav class="navigation">
-      <a class="navigation__link navigation__link--focused" href="#">Home</a>
-      <a class="navigation__link" href="#">About</a>
-      <a class="navigation__link" href="#">Contact</a>
+      <a class="navigation__link navigation__link--focused" href="#">링크 1</a>
+      <a class="navigation__link" href="#">링크 2</a>
+      <a class="navigation__link" href="#">링크 3</a>
+      <a class="navigation__link" href="#">링크 4</a>
     </nav>
   </body>
 </html>
